pod-security/baseline/restrict-seccomp/restrict-seccomp.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp
  annotations:
    policies.kyverno.io/title: Restrict Seccomp
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.nirmata.io/remediation-docs: "https://docs.nirmata.io/policysets/podsecurity/baseline/restrict-seccomp/"
    policies.kyverno.io/standards: "cis-eks,cis-kubernetes,cis-aks,cis-gke,nsa-cisa,nist-800-53"
    policies.nirmata.io/nsa-cisa-control: "Sec.1.4"
    policies.nirmata.io/nist-800-53-control: "CM-7,SI-3"
    policies.kyverno.io/description: >-
      The seccomp profile must not be explicitly set to Unconfined. This policy, 
      requiring Kubernetes v1.19 or later, ensures that the fields
      spec.securityContext.seccompProfile.type,
      spec.containers[*].securityContext.seccompProfile.type,
      spec.initContainers[*].securityContext.seccompProfile.type, and
      spec.ephemeralContainers[*].securityContext.seccompProfile.type
      must be unset or set to `RuntimeDefault` or `Localhost`.
spec:
  background: true
  validationFailureAction: Audit
  rules:
    - name: check-seccomp
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Use of custom Seccomp profiles is disallowed.
        pattern:
          spec:
            =(securityContext):
              =(seccompProfile):
                =(type): "RuntimeDefault | Localhost"
            =(ephemeralContainers):
              - =(securityContext):
                  =(seccompProfile):
                    =(type): "RuntimeDefault | Localhost"
            =(initContainers):
              - =(securityContext):
                  =(seccompProfile):
                    =(type): "RuntimeDefault | Localhost"
            containers:
              - =(securityContext):
                  =(seccompProfile):
                    =(type): "RuntimeDefault | Localhost"
